# http_smtp_bridge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn_conf.py  main.py  pyproject.toml  run.sh  test_api.py
.github/workflows/: docker-publish.yml
app/: main.py
app/api/: routes.py
app/core/: config.py  security.py  smtp.py
app/models/: email.py
